--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <div>Navbar</div>
   <div>{{title}}</div>
   <app-register></app-register>
+  <app-aimen></app-aimen>
+
 </div>
 
 <router-outlet></router-outlet>
