--- a/src/app/aimen/aimen.component.html
+++ b/src/app/aimen/aimen.component.html
@@ -1,8 +1,8 @@
 
 <div id="root">
   <ul>
-    <li>Angular</li>
-    <li>C#</li>
-    <li>JavaScript</li>
+    <li><a href="#">Angular</a></li>
+    <li><a href="#">C#</a></li>
+    <li><a href="#">JavaScript</a></li>
   </ul>
 </div>
