--- a/src/app/aimen/aimen.component.sass
+++ b/src/app/aimen/aimen.component.sass
@@ -1,13 +1,13 @@
-#root{
-    font-size: 15px;
-    padding: 5px;
-    margin: 5px;
-    display: flex;
-    justify-content: center;
-}
+#root
+    font-size: 15px
+    padding: 5px
+    margin: 5px
+    display: flex
+    justify-content: center
 
-ul{
-    display: flex;
-    gap: 50px;
-    list-style: none;
-}
+
+ul
+    display: flex
+    gap: 50px
+    list-style: none
+
